# cw-COMP0034

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
comp0034_tutorials.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
comp0035_CosmoSEucl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
coursework1/code/: app.py  app_2.py  app_3.py  app_4.py  components.py  data_processing.py  layout.py  test.py  test_app.py  visualizations.py
coursework1/data/: cleaned_grants_data.xlsx  ~$cleaned_grants_data.xlsx
coursework1/report/: coursework1.md  report.md
coursework2/: app.py  config.py  run.py
coursework2/app/: __init__.py  _init_.py  forms.py  models.py  routes.py
coursework2/app/templates/: index.html  layout.html  submit.html
coursework2/gla_grants_app/: __init__.py  dash_app.py  forms.py  helpers.py  models.py  routes.py
coursework2/gla_grants_app/assets/: custom.css
coursework2/gla_grants_app/templates/: account.html  admin_dashboard.html  dash_visualization.html  data_visualization.html  grants_dataset.html  index.html  landing.html  layout.html  login.html  news.html  register.html  submit_application.html
coursework2/gla_grants_app/templates/errors/: 404.html  500.html
coursework2/instance/: your_database.db
coursework2/tests/: .coverage  test_gla_app.py
instance/: gla_grants.sqlite
