# Documentation for pyproject.toml: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

# name and version are mandatory, change the values but do not delete them.
[project]
name = "comp0035-CosmoSEucl"
version = "2024.1"
description = "COMP0035 Coursework using GLA Grants data"

dependencies = [
    "pandas",
    "matplotlib",
    "pathlib",
    "flake8",
    "pylint",
    "openpyxl",
    "plotly",
    "dash",
    "dash-bootstrap-components",
    "flask",
    "flask_sqlalchemy",
    "selenium",
    "networkx",
    "wordcloud",
    "scikit-learn"
]

[tool.pytest.ini_options]
testpaths = ["coursework1/code"]
pythonpath = [".", "coursework1/code"]